[package]
name = "captain-mast"
version = "0.1.0"
edition = "2021"
description = "A standalone MQTT broker with Mosquitto-compatible auth, ACL, and config"

[[bin]]
name = "captain-mast"
path = "src/main.rs"

[dependencies]
# Broker engine
rumqttd = { version = "0.20", default-features = false, features = ["use-rustls", "verify-client-cert"] }

# Async runtime (managed internally by rumqttd; we use it for the auth handler future)
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Password hashing
bcrypt = "0.15"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Terminal password prompt (no echo)
rpassword = "7"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
thiserror = "1"
