[package]
name = "captain-mast"
version = "0.1.0"
edition = "2021"
description = "A standalone MQTT broker with Mosquitto-compatible auth, ACL, and config"

[[bin]]
name = "captain-mast"
path = "src/main.rs"

[dependencies]
# Broker engine
rumqttd = { version = "0.20", default-features = false, features = ["use-rustls", "verify-client-cert"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

# Password hashing
bcrypt = "0.15"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Terminal password prompt (no echo)
rpassword = "7"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
thiserror = "1"

# ── Inference ──────────────────────────────────────────────────────────────────

# HTTP client for HF Inference API (rustls so no OpenSSL dependency)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# JSON serialization for HF request/response
serde = { version = "1", features = ["derive"] }
serde_json = "1"
